--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,89 @@
-body {
+*{
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+
+#root{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+img{
+  border-top-right-radius: 10px;
+  border-top-left-radius: 10px;
+}
+
+.each-tour{
+  
+  max-width: 1000px;
+  width: 60%;
+  min-width: 300px;
+  background-color: white;
+  border-radius: 10px;
+  box-shadow: 0px 2px 5px 0px grey;
+  display: flex;
+  flex-direction: column;
+    cursor: pointer;
+}
+.each-tour button{
+  align-self:center ;
+  background-color: white;
+  border: 1px solid red;
+  font-weight: 700;
+  padding: 5px 10px;
+  margin: 5px 0px;
+  border-radius: 5px;
+
+}
+
+section{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 20px;
+  margin: 20px 0px;
+  
+}
+.name-and-price{
+  display: flex;
+  justify-content: space-between;
+  padding: 0 5px;
+}
+.info{
+  padding: 0 5px;
+}
+
+.zoom:hover{
+animation-name: zoom;
+animation-duration: 1s;
+animation-timing-function: ease-in-out;
+
+}
+
+@keyframes zoom{
+ from{
+
+   transform: scale(1,1);
+ }
+  
+  to{
+    transform: scale(1.01,1.01);
+  }
+}
+
+
+.refresh{
+  background-color: aqua;
+  border: none;
+  border-radius: 5px;
+  padding: 5px 10px;
+}
+.no-tours{
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
